<resources>
    <string name="app_name">Practice 2 App Install</string>
    <string name="main_btnadd_app">Install APP</string>
    <string name="NoApps">No apps installed!!!</string>
    <string name="installNameAPP">App Name</string>
    <string name="installNameDev">Developer Name</string>
    <string name="installAppDetails">App Details</string>
    <string name="installInstall">Installed</string>
    <string name="installBtnSave">Save</string>
    <string name="msj_updated">Updated</string>
    <string name="msj_install">Installed</string>
    <string name="delete_message">Do you want to delete item</string>
    <string name="delete_title">Delete</string>
    <string name="installMsgNoData">The Data are required!!!</string>
    <string name="details_Uninstall">Uninstall</string>
    <string name="details_Open">Open</string>
    <string name="details_Update">Update</string>
    <string name="details_url1">http://www.posgrado.unam.mx</string>
    <string name="service_Title_update">Updating App</string>
    <string name="service_Text_update">Updating App</string>
    <string name="service_Title_update_End">Update Complete</string>
    <string name="service_Text_update_End">It is completed updating</string>
    <string name="service_Info_update_End">Updated</string>
    <string name="menu_details_edit">Edit App</string>
    <string name="menu_details_title">App Information</string>
    <string name="installUpdate">Update</string>
    <string name="menu_edit_title">Editing App</string>
    <string name="menu_install_title">Install App</string>
    <string name="msj_details_delete">Uninstall App</string>
    <string name="msj_details_text">Do you want to uninstall the app</string>
    <string name="service_Title_uninstall_End">Uninstall Complete</string>
    <string name="service_Text_uninstall_End">Uninstall is complete</string>
    <string name="service_Info_uninstall_End">Uninstalled</string>

</resources>
